# dcoupler

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  specs.md
dcoupler/: __init__.py
dcoupler/components/: __init__.py  fuse.py  routing.py
dcoupler/core/: __init__.py  bmi.py  component.py  connection.py  conservation.py  graph.py  temporal.py
dcoupler/diagnostics/: __init__.py  gradients.py
dcoupler/losses/: __init__.py  hydrological.py
dcoupler/observers/: __init__.py  base.py  streamflow.py
dcoupler/optimization/: __init__.py  multi_observation.py  parameters.py  trainer.py
dcoupler/utils/: __init__.py  temporal.py
dcoupler/wrappers/: __init__.py  enzyme.py  jax.py  process.py
examples/: minimal_coupled.py  standalone_simplicity.py  temporal_orchestrator.py  toy_coupled.py
scripts/: run_three_component_experiment.py  setup_groundwater_data.py  setup_test_deps.sh
tests/: conftest.py  test_bmi_protocol.py  test_conservation_integration.py  test_deps_smoke.py  test_equivalence.py  test_graph.py  test_jax_component.py  test_phase3.py  test_phase4.py  test_phase5.py  test_process_component.py
