[project]
name = "dcoupler"
version = "0.2.0"
description = "Differentiable Earth System Coupler"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Darri Eythorsson", email = "darri.eythorsson@ucalgary.ca" }
]
keywords = ["hydrology", "differentiable", "coupling", "earth-system", "pytorch"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Hydrology",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Typing :: Typed",
]

dependencies = [
  "torch>=2.0",
  "numpy",
  "scipy",
  "xarray",
]

[project.optional-dependencies]
jax = [
  "jax>=0.4",
  "jaxlib",
]
models = [
  # cfuse and droute are companion packages; install from GitHub if needed
  # "cfuse",
  # "droute",
]
dev = [
  "pytest",
  "pytest-cov",
]
all = [
  "dcoupler[jax,dev]",
]

[project.urls]
Repository = "https://github.com/DarriEy/dcoupler"
Homepage = "https://github.com/DarriEy/dcoupler"
Issues = "https://github.com/DarriEy/dcoupler/issues"

[tool.setuptools.packages.find]
include = ["dcoupler*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
